--- a/templates/homepage.twig
+++ b/templates/homepage.twig
@@ -1,6 +1,6 @@
 {% extends 'base.twig' %}
 {% block content %}
-	<p class="text-success">
-        Page d'accueil {{ name }}
-    </p>
+	<h3>
+        Page d'accueil de {{ name }}
+    </h3>
 {% endblock %}
