--- a/templates/homepage.twig
+++ b/templates/homepage.twig
@@ -1,6 +1,34 @@
 {% extends 'base.twig' %}
 {% block content %}
-	<h3>
-        Page d'accueil de {{ name }}
-    </h3>
+	<div class="container py-5">
+		<div class="d-flex justify-content-end">
+			<a href="/todolist_php/public/contact/" class="btn btn-outline-dark">
+				Nouveau contact
+			</a>
+		</div>
+		{% for contact in contacts %}
+			<div class="card my-2">
+				<div class="card-body">
+					<div class="d-flex justify-content-between">
+						<div>
+							{{ contact.prenom }} {{contact.nom}}
+						</div>
+						<div class="d-flex">
+							<div>
+								<a href="/todolist_php/public/contact/{{contact.id}}" class="btn btn-outline-success mx-2">voir</a>
+							</div>
+							<div>
+								<a href="/todolist_php/public/contact/{{contact.id}}/update" class="btn btn-outline-warning mx-2">modifier</a>
+							</div>
+							<div>
+								<a href="/todolist_php/public/contact/{{contact.id}}/delete" 
+								onclick="return confirm('Êtes-vous sûr de vouloir supprimer cette tâche');" 
+								class="btn btn-outline-danger mx-2">supprimer</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		{% endfor %}
+	</div>
 {% endblock %}
